Removed the apache http client so android apps can use the library. Updated the source and target compatibility to 1.7.