@@ -1,73 +1,63 @@
 package org.stellar.sdk;
 
 import junit.framework.TestCase;
-
-import org.apache.http.HttpEntity;
-import org.apache.http.HttpResponse;
 import org.apache.http.HttpStatus;
 import org.apache.http.HttpVersion;
 import org.apache.http.StatusLine;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.methods.HttpPost;
 import org.apache.http.message.BasicStatusLine;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 import org.stellar.sdk.responses.SubmitTransactionResponse;
 
-import java.io.ByteArrayInputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.URISyntaxException;
+import java.io.*;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
 
-import static org.mockito.Matchers.any;
 import static org.mockito.Mockito.when;
 
 public class ServerTest extends TestCase {
+
     @Mock
-    private HttpClient mockClient;
-    @Mock
-    private HttpResponse mockResponse;
-    @Mock
-    private HttpEntity mockEntity;
+    private MockURLStreamHandler mockURLStreamHandler;
 
     private final StatusLine httpOK = new BasicStatusLine(HttpVersion.HTTP_1_1, HttpStatus.SC_OK, "OK");
     private final String successResponse =
             "{\n" +
-            "  \"_links\": {\n" +
-            "    \"transaction\": {\n" +
-            "      \"href\": \"/transactions/2634d2cf5adcbd3487d1df042166eef53830115844fdde1588828667bf93ff42\"\n" +
-            "    }\n" +
-            "  },\n" +
-            "  \"hash\": \"2634d2cf5adcbd3487d1df042166eef53830115844fdde1588828667bf93ff42\",\n" +
-            "  \"ledger\": 826150,\n" +
-            "  \"envelope_xdr\": \"AAAAAKu3N77S+cHLEDfVD2eW/CqRiN9yvAKH+qkeLjHQs1u+AAAAZAAMkoMAAAADAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAbYQq8ek1GitmNBUloGnetfWxSpxlsgK48Xi66dIL3MoAAAAAC+vCAAAAAAAAAAAB0LNbvgAAAEDadQ25SNHWTg0L+2wr/KNWd8/EwSNFkX/ncGmBGA3zkNGx7lAow78q8SQmnn2IsdkD9MwICirhsOYDNbaqShwO\",\n" +
-            "  \"result_xdr\": \"AAAAAAAAAGQAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA=\",\n" +
-            "  \"result_meta_xdr\": \"AAAAAAAAAAEAAAACAAAAAAAMmyYAAAAAAAAAAG2EKvHpNRorZjQVJaBp3rX1sUqcZbICuPF4uunSC9zKAAAAAAvrwgAADJsmAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAQAMmyYAAAAAAAAAAKu3N77S+cHLEDfVD2eW/CqRiN9yvAKH+qkeLjHQs1u+AAAAFzCfYtQADJKDAAAAAwAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAA\"\n" +
-            "}";
+                    "  \"_links\": {\n" +
+                    "    \"transaction\": {\n" +
+                    "      \"href\": \"/transactions/2634d2cf5adcbd3487d1df042166eef53830115844fdde1588828667bf93ff42\"\n" +
+                    "    }\n" +
+                    "  },\n" +
+                    "  \"hash\": \"2634d2cf5adcbd3487d1df042166eef53830115844fdde1588828667bf93ff42\",\n" +
+                    "  \"ledger\": 826150,\n" +
+                    "  \"envelope_xdr\": \"AAAAAKu3N77S+cHLEDfVD2eW/CqRiN9yvAKH+qkeLjHQs1u+AAAAZAAMkoMAAAADAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAbYQq8ek1GitmNBUloGnetfWxSpxlsgK48Xi66dIL3MoAAAAAC+vCAAAAAAAAAAAB0LNbvgAAAEDadQ25SNHWTg0L+2wr/KNWd8/EwSNFkX/ncGmBGA3zkNGx7lAow78q8SQmnn2IsdkD9MwICirhsOYDNbaqShwO\",\n" +
+                    "  \"result_xdr\": \"AAAAAAAAAGQAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA=\",\n" +
+                    "  \"result_meta_xdr\": \"AAAAAAAAAAEAAAACAAAAAAAMmyYAAAAAAAAAAG2EKvHpNRorZjQVJaBp3rX1sUqcZbICuPF4uunSC9zKAAAAAAvrwgAADJsmAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAQAMmyYAAAAAAAAAAKu3N77S+cHLEDfVD2eW/CqRiN9yvAKH+qkeLjHQs1u+AAAAFzCfYtQADJKDAAAAAwAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAA\"\n" +
+                    "}";
 
     private final StatusLine httpBadRequest = new BasicStatusLine(HttpVersion.HTTP_1_1, HttpStatus.SC_BAD_REQUEST, "Bad Request");
     private final String failureResponse =
             "{\n" +
-            "  \"type\": \"https://stellar.org/horizon-errors/transaction_failed\",\n" +
-            "  \"title\": \"Transaction Failed\",\n" +
-            "  \"status\": 400,\n" +
-            "  \"detail\": \"TODO\",\n" +
-            "  \"instance\": \"horizon-testnet-001.prd.stellar001.internal.stellar-ops.com/IxhaI70Tqo-112305\",\n" +
-            "  \"extras\": {\n" +
-            "    \"envelope_xdr\": \"AAAAAK4Pg4OEkjGmSN0AN37K/dcKyKPT2DC90xvjjawKp136AAAAZAAKsZQAAAABAAAAAAAAAAEAAAAJSmF2YSBGVFchAAAAAAAAAQAAAAAAAAABAAAAAG9wfBI7rRYoBlX3qRa0KOnI75W5BaPU6NbyKmm2t71MAAAAAAAAAAABMS0AAAAAAAAAAAEKp136AAAAQOWEjL+Sm+WP2puE9dLIxWlOibIEOz8PsXyG77jOCVdHZfQvkgB49Mu5wqKCMWWIsDSLFekwUsLaunvmXrpyBwQ=\",\n" +
-            "    \"result_codes\": {\n" +
-            "      \"transaction\": \"tx_failed\",\n" +
-            "      \"operations\": [\n" +
-            "        \"op_no_destination\"\n" +
-            "      ]\n" +
-            "    },\n" +
-            "    \"result_xdr\": \"AAAAAAAAAGT/////AAAAAQAAAAAAAAAB////+wAAAAA=\"\n" +
-            "  }\n" +
-            "}";
+                    "  \"type\": \"https://stellar.org/horizon-errors/transaction_failed\",\n" +
+                    "  \"title\": \"Transaction Failed\",\n" +
+                    "  \"status\": 400,\n" +
+                    "  \"detail\": \"TODO\",\n" +
+                    "  \"instance\": \"horizon-testnet-001.prd.stellar001.internal.stellar-ops.com/IxhaI70Tqo-112305\",\n" +
+                    "  \"extras\": {\n" +
+                    "    \"envelope_xdr\": \"AAAAAK4Pg4OEkjGmSN0AN37K/dcKyKPT2DC90xvjjawKp136AAAAZAAKsZQAAAABAAAAAAAAAAEAAAAJSmF2YSBGVFchAAAAAAAAAQAAAAAAAAABAAAAAG9wfBI7rRYoBlX3qRa0KOnI75W5BaPU6NbyKmm2t71MAAAAAAAAAAABMS0AAAAAAAAAAAEKp136AAAAQOWEjL+Sm+WP2puE9dLIxWlOibIEOz8PsXyG77jOCVdHZfQvkgB49Mu5wqKCMWWIsDSLFekwUsLaunvmXrpyBwQ=\",\n" +
+                    "    \"result_codes\": {\n" +
+                    "      \"transaction\": \"tx_failed\",\n" +
+                    "      \"operations\": [\n" +
+                    "        \"op_no_destination\"\n" +
+                    "      ]\n" +
+                    "    },\n" +
+                    "    \"result_xdr\": \"AAAAAAAAAGT/////AAAAAQAAAAAAAAAB////+wAAAAA=\"\n" +
+                    "  }\n" +
+                    "}";
 
     private Server server;
 
@@ -76,11 +66,12 @@ public class ServerTest extends TestCase {
         Network.useTestNetwork();
 
         MockitoAnnotations.initMocks(this);
-        server = new Server("https://horizon.stellar.org");
-        server.setHttpClient(mockClient);
 
-        when(mockResponse.getEntity()).thenReturn(mockEntity);
-        when(mockClient.execute((HttpPost) any())).thenReturn(mockResponse);
+        String url = "https://horizon.stellar.org";
+        server = new Server(url);
+
+        URL mockTransactionUrl = new URL(new URI(url).toURL(), "/transactions", mockURLStreamHandler);
+        server.setSubmitTransactionUrl(mockTransactionUrl);
     }
 
     @After
@@ -101,7 +92,7 @@ public class ServerTest extends TestCase {
         assertEquals(1, builder.getOperationsCount());
         Transaction transaction = builder.build();
         assertEquals(2908908335136769L, transaction.getSequenceNumber());
-        assertEquals(new Long(2908908335136769L), account.getSequenceNumber());
+        assertEquals(Long.valueOf(2908908335136769L), account.getSequenceNumber());
         transaction.sign(source);
         return transaction;
     }
@@ -109,12 +100,22 @@ public class ServerTest extends TestCase {
     @Test
     public void testSubmitTransactionSuccess() throws IOException {
         InputStream jsonResponse = new ByteArrayInputStream(successResponse.getBytes(StandardCharsets.UTF_8));
-        when(mockResponse.getStatusLine()).thenReturn(httpOK);
-        when(mockEntity.getContent()).thenReturn(jsonResponse);
+        MockHttpURLConnection connection = Mockito.mock(MockHttpURLConnection.class);
+        mockURLStreamHandler.setConnection(connection);
+
+        when(mockURLStreamHandler.openConnection(Mockito.isA(URL.class))).thenReturn(connection);
+        when(connection.getInputStream()).thenReturn(jsonResponse);
+        when(connection.getOutputStream()).thenReturn(new ByteArrayOutputStream());
 
         SubmitTransactionResponse response = server.submitTransaction(this.buildTransaction());
+
+        Mockito.verify(connection, Mockito.times(1)).setRequestMethod(Mockito.isA(String.class));
+        Mockito.verify(connection, Mockito.times(1)).setDoInput(Mockito.isA(Boolean.class));
+        Mockito.verify(connection, Mockito.times(1)).setDoOutput(Mockito.isA(Boolean.class));
+        Mockito.verify(connection, Mockito.times(3)).setRequestProperty(Mockito.isA(String.class), Mockito.isA(String.class));
+
         assertTrue(response.isSuccess());
-        assertEquals(response.getLedger(), new Long(826150L));
+        assertEquals(response.getLedger(), Long.valueOf(826150L));
         assertEquals(response.getHash(), "2634d2cf5adcbd3487d1df042166eef53830115844fdde1588828667bf93ff42");
         assertNull(response.getExtras());
     }
@@ -122,10 +123,20 @@ public class ServerTest extends TestCase {
     @Test
     public void testSubmitTransactionFail() throws IOException {
         InputStream jsonResponse = new ByteArrayInputStream(failureResponse.getBytes(StandardCharsets.UTF_8));
-        when(mockResponse.getStatusLine()).thenReturn(httpBadRequest);
-        when(mockEntity.getContent()).thenReturn(jsonResponse);
+        MockHttpURLConnection connection = Mockito.mock(MockHttpURLConnection.class);
+        mockURLStreamHandler.setConnection(connection);
+
+        when(mockURLStreamHandler.openConnection(Mockito.isA(URL.class))).thenReturn(connection);
+        when(connection.getInputStream()).thenReturn(jsonResponse);
+        when(connection.getOutputStream()).thenReturn(new ByteArrayOutputStream());
 
         SubmitTransactionResponse response = server.submitTransaction(this.buildTransaction());
+
+        Mockito.verify(connection, Mockito.times(1)).setRequestMethod(Mockito.isA(String.class));
+        Mockito.verify(connection, Mockito.times(1)).setDoInput(Mockito.isA(Boolean.class));
+        Mockito.verify(connection, Mockito.times(1)).setDoOutput(Mockito.isA(Boolean.class));
+        Mockito.verify(connection, Mockito.times(3)).setRequestProperty(Mockito.isA(String.class), Mockito.isA(String.class));
+
         assertFalse(response.isSuccess());
         assertNull(response.getLedger());
         assertNull(response.getHash());
@@ -135,4 +146,56 @@ public class ServerTest extends TestCase {
         assertEquals("tx_failed", response.getExtras().getResultCodes().getTransactionResultCode());
         assertEquals("op_no_destination", response.getExtras().getResultCodes().getOperationsResultCodes().get(0));
     }
+
+    public class MockURLStreamHandler extends URLStreamHandler implements URLStreamHandlerFactory {
+
+        private MockHttpURLConnection connection;
+
+        public MockHttpURLConnection getConnection() {
+            return connection;
+        }
+
+        @Override
+        protected URLConnection openConnection(URL u) throws IOException {
+            connection = new MockHttpURLConnection(u);
+            return connection;
+        }
+
+        @Override
+        public URLStreamHandler createURLStreamHandler(String protocol) {
+            return this;
+        }
+
+        public void setConnection(MockHttpURLConnection connection) {
+            this.connection = connection;
+        }
+
+    }
+
+    public class MockHttpURLConnection extends HttpURLConnection {
+
+        MockHttpURLConnection(URL url) {
+            super(url);
+        }
+
+        @Override
+        public void connect() throws IOException {
+        }
+
+        @Override
+        public void disconnect() {
+        }
+
+        @Override
+        public boolean usingProxy() {
+            return false;
+        }
+
+        @Override
+        public OutputStream getOutputStream() throws IOException {
+            return new ByteArrayOutputStream();
+        }
+
+    }
+
 }
